--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
       <link rel="stylesheet" href="/css/wyy/iconfont.css" type="text/css" media="all">
       <link rel="stylesheet" type="text/css" href="css/font-awesome.css">
       <link rel="stylesheet" type="text/css" href="css/animate.css">
-      <link rel="shortcut icon" href="https://cdn.jsdelivr.net/gh/maomengnb/picture/20210721213028.ico" type="image/x-icon">
+      <link rel="shortcut icon" href="https://fastly.jsdelivr.net/gh/maomengnb/picture/20210721213028.ico" type="image/x-icon">
       <link href="https://fonts.googleapis.com/css?family=Montserrat:700" rel="stylesheet">
       <meta charset="utf-8">
       <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -20,13 +20,13 @@
 <div class="adcenter"><script src="js/ggad2_728x90.js"></script></div>
       <!--Card-->
       <div class="card animated fadeIn">
-         <center><img class="center animated rollIn" src="https://s6.jpg.cm/2022/03/09/L0EVGO.jpg" alt="avatar"></center>
+         <center><img class="center animated rollIn" src="https://i.imgtg.com/2022/10/13/JUoBX.png" alt="avatar"></center>
          <hr>
          <div class="name">
             小 蒋
          </div>
          <p class="subtitle">Xiao Jiang</p>
-         <p class="location"><i class="fa fa-get-pocket"> </i><a href="https://mengclub.xyz" target="_blank"> 我的博客</a>
+         <p class="location"><i class="fa fa-get-pocket"> </i><a href="https://maomeng.cf/" target="_blank"> 我的博客</a>
          </p>
          <p class="icons animated pulse">
             <a href="http://wpa.qq.com/msgrd?v=3&uin=1287766992&site=qq&menu=yes" target="_blank">
@@ -53,7 +53,7 @@
                 <i class="iconfont icon-wyy1" style="font-size: 1em;"></i>
             </span>
             </a>
-            <a href="https://steamcommunity.com/id/596765341/" target="_blank">
+            <a href="https://steamcommunity.com/id/maomeng_cf/" target="_blank">
             <span class="fa-stack fa-lg">
                 <i class="fa fa-circle-thin fa-stack-2x"></i>
                 <i class="fa fa-steam fa-stack-1x"></i>
