--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
       <link rel="stylesheet" href="/css/wyy/iconfont.css" type="text/css" media="all">
       <link rel="stylesheet" type="text/css" href="css/font-awesome.css">
       <link rel="stylesheet" type="text/css" href="css/animate.css">
-      <link rel="shortcut icon" href="https://fastly.jsdelivr.net/gh/maomengnb/picture/20210721213028.ico" type="image/x-icon">
+      <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
       <link href="https://fonts.googleapis.com/css?family=Montserrat:700" rel="stylesheet">
       <meta charset="utf-8">
       <meta http-equiv="X-UA-Compatible" content="IE=edge">
