--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
    <head>
-      <title>小蒋的个人主页</title>
+      <title>小梦的个人主页</title>
       <link rel="stylesheet" type="text/css" href="css/style.css">
       <link rel="stylesheet" href="/css/wyy/iconfont.css" type="text/css" media="all">
       <link rel="stylesheet" type="text/css" href="css/font-awesome.css">
@@ -22,7 +22,7 @@
          <center><img class="center animated rollIn" src="https://i.imgtg.com/2022/10/13/JUoBX.png" alt="avatar"></center>
          <hr>
          <div class="name">
-            小 蒋
+            小 梦
          </div>
          <p class="subtitle">Xiao Jiang</p>
          <p class="location"><i class="fa fa-get-pocket"> </i><a href="https://maomeng.cf/" target="_blank"> 我的博客</a>
