--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
          <div class="name">
             小 梦
          </div>
-         <p class="subtitle">Xiao Jiang</p>
+         <p class="subtitle">Xiao Meng</p>
          <p class="location"><i class="fa fa-get-pocket"> </i><a href="https://maomeng.cf/" target="_blank"> 我的博客</a>
          </p>
          <p class="icons animated pulse">
